Quick update in case I have to work from laptop

--- a/SDM_paper_draft.Rmd
+++ b/SDM_paper_draft.Rmd
@@ -19,7 +19,8 @@ author: Keith D.M.^a,b^,  Sameoto J.A.^a^, Keyser F.M.^a^, Ward-Paige C.A.^c^, A
 date:  ^a^ Bedford Institue of Oceanography, 
        ^b^ Dalhousie University, 
        ^c^ eOceans
-abstract: We sucks at managing fisheries.  There are a bunch of reasons for that, but one possible reason is due to averaging across complex spatial processes.  Recent statistical advances means we can do better.  Here we try to do better.  Here we develop species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) using groundfish trawl surveys in Canada and the United States.  Results show both seasonal and long term shifts in the distribution of both species and a constant environmental effect of depth and the average sea surface temperature (SST; average between XXXX and YYYY).  These models also indicate that the distribution of the cod changes significantly approximately every 5 years, while the Yellowtail distribution appears to be somewhat more variable with the best models indicating changes within 3 years. These models are able to predict the distribution of both species at least 3 years into the future. Over time both species appear to have shifted their distributions towards the North and east, much of this shift is due to a decline in the probability of observing either species in the western and southern portions of Georges Bank.  The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring. In the fall the distribution of cod shifts towards the edge of the bank, while it appears the catchability of yellowtail declines during the this time.  Here we show how these models are able to provide novel inshights into both seasonal and interannually variabity in species distributions and identify environmental covariates which have a consistent influence on the distribution of these species. Incorporation of this kind of information into stock assessment process will improve  science advice and our ability to sustainably manage these stocks.  
+abstract: Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how environmental factors influence both the spatial and temporal dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat a stock as a homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods has resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for yellowtail flounder (*Limanda ferruginea*) and Atlantic cod (*Gadus morhua*) on Georges Bank using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both species.  The average sea surface temperature (SST; average between XXXX and YYYY) and depth were significant predictors of the distribution of both species throughout the year.  Significant shifts in the distribution of both species occurs relatively frequently, with the distribution of cod observed to differ approximately every 5 years, while the Yellowtail distribution appears to fluctuate every 3 years. These shifts in distribution are not random, with the center of gravity of the core areas for both species shifting to the north and east throughout the study period.  Much of this shift is due to the loss of the species from southern and western portions of Georges Bank.  Models for both species were also relatively successful at capturing the spatial dynamics of the stock up to 3 years into the future. The seasonal distribution of cod and yellowtail are relatively consistent throughout the late winter and spring. In the fall the distribution of cod shifts towards the edge of the bank, while it appears the catchability of yellowtail declines during the this time. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions and identify environmental covariates which have a relationship with the distribution of these species. Incorporation of this kind of information into stock assessment processes will improve science advice and our ability to sustainably manage these stocks.  
+
 ---
 
 
@@ -127,6 +128,12 @@ sst_depth_spatial <- paste0(direct.proj,"Results/Figures/depth_and_sst_fields.pn
 \twocolumn
 
 # Introduction
+
+Sustainable management of marine fisheries has been recognized as a critical challenge facing society in the 21^st^ century [@cbdAichiBiodiversityTargets2018]. The challenges facing sustainable fisheries management are multifaceted and include complex socio-economic, political, and scientific interactions (CITE). From a scientific perspective, disentangling how environmental, ecological, and anthropogenic factors impact the population dynamics of marine fishes is pivotal to development of sustainability strategies. 
+
+Developing a better understanding of how environmental factors influence the temporal dynamics of marine fishes has . 
+
+Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat a stock as a homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods has resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data. 
 
 Sustainable management of fisheries has proven difficult.  By accounting for spatial patterns and processes we may be able to do better
 
